# cpp-game-engine

./: CMakeLists.txt  README.md  vcpkg.json
engine_data/scripts/: create_default_proj.sh  make_and_run.sh
engine_data/scripts/default_game_data/: CMakeLists.txt  default.cpp  default.h  main.cpp  vcpkg.json
engine_data/scripts/default_game_data/assets/config/: maps_config.json  settings_config.json  tilesets_config.json  ui_config.json
engine_data/scripts/default_game_data/assets/data/: actors_transformations_data.json  tilemaps_transformations_data.json
engine_data/scripts/default_game_data/assets/maps/: default_map.json
engine_data/scripts/default_game_data/assets/tilesets/: tilemap_test.json
engine_data/src/: example.cpp
include/BaseClasses/: Actor.h  ParticleSystem.h  TileMap.h  WidgetActor.h
include/CombinedUsefulClasses/: TextWidget.h
include/Components/: AnimationComponent.h  CollisionComponent.h  InputComponent.h  SpawnableComponent.hpp
include/EngineFiles/: CollisionManager.hpp  CollisionTypes.hpp  DrawableStorage.h  FilesHandler.hpp  InputManager.hpp  MapHandler.hpp  ObjectStorage.hpp  SystemFactory.hpp  TileSetContainer.h
include/EngineFiles/Animation/: Animation.hpp  AnimationTextures.hpp  AnimationTileSet.hpp  AnimationUpdate.hpp
include/EngineFiles/Saving/: ActorSavingSystem.hpp  JSONhandler.h  SavingComponent.hpp  TransformableSaved.h
include/EngineFiles/Saving/JsonSF/: Color.hpp  IntRect.hpp  Time.hpp  Vector2.hpp
include/EngineFiles/Saving/SavingStructs/: Actor_SS.hpp  AnimationComponent_SS.hpp  Engine_SS.hpp  Map_SS.hpp  TileSet_SS.hpp  Transformable_SS.hpp  UI_SS.hpp
include/MainCycle/: MainCycle.h
include/UI/: DefaultInterfaceTemplates.hpp  ImGuiHandler.h  ImGuiHelpers.h  Output.hpp
include/Utils/: FastVector.hpp  GameTools.hpp  Logger.h  UsefulFunctions.h
src/BaseClasses/: Actor.cpp  ParticleSystem.cpp  TileMap.cpp  WidgetActor.cpp
src/CombinedUsefulClasses/: TextWidget.cpp
src/Components/: AnimationComponent.cpp  CollisionComponent.cpp  InputComponent.cpp  SpawnableComponent.cpp
src/EngineFiles/: CollisionManager.cpp  DrawableStorage.cpp  FilesHandler.cpp  InputManager.cpp  MapHandler.cpp  ObjectStorage.cpp  SystemFactory.cpp  TileSetContainer.cpp
src/EngineFiles/Animation/: Animation.cpp  AnimationTextures.cpp  AnimationTileSet.cpp  AnimationUpdate.cpp
src/EngineFiles/Saving/: ActorSavingSystem.cpp
src/EngineFiles/Saving/SavingStructs/: Actor_SS.cpp
src/MainCycle/: MainCycle.cpp
src/UI/: DefaultInterfaceTemplates.cpp  ImGuiHandler.cpp  Output.cpp
src/Utils/: GameTools.cpp  Logger.cpp  UsefulFunctions.cpp
